Fix some layout Issues.

--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1rem 0rem 1rem 4rem;
-  width:0;
+  width: 0;
 }
 
 .input-group .btn {
@@ -452,6 +452,7 @@ a {
   font-style: italic;
   color: var(--color-body-darker);
   line-height: 1.3;
+  margin: 1rem;
 }
 
 .quote__text::before {
@@ -619,7 +620,7 @@ a {
 /* Blocks */
 
 .block {
-  --padding-vertical: 6rem;
+  --padding-vertical: 1rem;
   padding: var(--padding-vertical) 2rem;
 }
 
@@ -734,6 +735,13 @@ a {
   width: 100%;
 }
 
+.hero__content {
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
 @media screen and (min-width: 769px) {
   .hero__content {
     text-align: left;
@@ -824,7 +832,7 @@ a {
 /* Footer */
 
 .footer a {
-  color:#777;
+  color: #777;
   transition: 0.3s;
 }
 
@@ -851,7 +859,7 @@ a {
 }
 
 .footer__brand img {
-  width:100%;
+  width: 100%;
   max-width: 230px;
 }
 
@@ -914,20 +922,18 @@ a {
   height: 8rem;
   justify-self: center;
   align-self: center;
-
 }
 
-@media screen and (min-width:768px) {
+@media screen and (min-width: 768px) {
   .ready {
     font-size: 1.5rem;
     text-align: left;
   }
 
-  .ready .btn{
-    height:4em;
-    width:25rem;
-    text-align:center;
-
+  .ready .btn {
+    height: 4em;
+    width: 25rem;
+    text-align: center;
   }
 
   .ready__header {
